[tool.poetry]
name = "spotify-tracklister"
version = "1.1.0"
description = ""
authors = ["Christof Bräutigam <github@mathior.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
